     still available if user selects it explicitly with BZR_SSH environment
     variable. (Alexander Belchenko, workaround for bug #107593)

  FEATURES:

   * New ``authentication.conf`` file holding the password or other credentials
     for remote servers. This can be used for ssh, sftp, smtp and other 
     supported transports.
     (Vincent Ladeuil)

   * New rich-root format, recording the same data about tree roots that's
     recorded for all other directories.  (Aaron Bentley)

   * ``switch`` command added for changing the branch a lightweight checkout
     is associated with and updating the tree to reflect the latest content
     accordingly. This command was previously part of the BzrTools plug-in.
     (Ian Clatworthy, Aaron Bentley, David Allouche)

  PERFORMANCE:

   * Commit updates the state of the working tree via a delta rather than
     supplying entirely new basis trees. For commit of a single specified file
     this reduces the wall clock time for commit by roughly a 30%.
     (Robert Collins, Martin Pool)

   * Fetch with pack repositories will no longer read the entire history graph.
     (Robert Collins, #88319)

   * Revert takes out an appropriate lock when reverting to a basis tree, and
     does not read the basis inventory twice. (Robert Collins)

  IMPROVEMENTS:

   * ``bzr tags`` now prints the revision number for each tag, instead of
     the revision id, unless --show-ids is passed. In addition, tags can be
     sorted chronologically instead of lexicographically with --sort=time.
     (Adeodato Simó, #120231)

  DOCUMENTATION:

  BUG FIXES:

   * A progress bar has been added for knitpack -> knitpack fetching.
     (Robert Collins, #157789)

   * ``commit`` is now able to invoke an external editor in a non-ascii
     directory. (Daniel Watkins, #84043)

   * Detect invalid transport reuse attempts by catching invalid URLs.
     (Vincent Ladeuil, #161819)

   * Do no use timeout in HttpServer anymore.